--- a/Tf_Idf_From_Scratch.ipynb
+++ b/Tf_Idf_From_Scratch.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "Scikit-Learn paket kodunda yer alan hesaplama standart notasyondan farklıdır. Aşağıdaki görselde her ikisi de yer almaktadır.\n",
     "\n",
-    "![image.png](attachment:image.png)\n"
+    "![image.png](https://raw.githubusercontent.com/aslicerman/TF-IDF-From-Scratch/main/tfidf2.png?token=AR6W6B6IPKIUZAAG2STMJRTBJLYQ2)\n"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "Scikit-Learn notasyonunda pay ve paydaya sıfır hatasını önelemek için fazladan 1 sabit sayısı eklenir. \n",
     "\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](https://raw.githubusercontent.com/aslicerman/TF-IDF-From-Scratch/main/tfidf3.png?token=AR6W6B3NMRO3EPJIA766EITBJLYQS)"
    ]
   },
   {
@@ -116,7 +116,7 @@
     "\n",
     "Bu temsilin ana sorunu, belirli bir kelimenin daha uzun belgelerde daha çok görünme olasılığı olduğundan tf değeri bu kelimeyi gerçekte olduğundan daha önemli hale getirecektir.Bu da uzun belgelere karşı bir önyargı yaratma problemini ortaya çıkaracaktır. Bu nedenle, bu sorunu çözme yaklaşımı,  **L2** veya **Öklid Normu** normalleştirmesidir. \n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "![image.png](https://raw.githubusercontent.com/aslicerman/TF-IDF-From-Scratch/main/tfidf4.png?token=AR6W6B5S4243IQKXZKS5CBLBJLYQE)\n",
     "\n",
     "                                                    - Öklid normu"
    ]
