--- a/Tf_Idf_From_Scratch.ipynb
+++ b/Tf_Idf_From_Scratch.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "Scikit-Learn paket kodunda yer alan hesaplama standart notasyondan farklıdır. Aşağıdaki görselde her ikisi de yer almaktadır.\n",
     "\n",
-    "![image.png](attachment:image.png)\n"
+    "![image.png](https://raw.githubusercontent.com/aslicerman/TF-IDF-From-Scratch/main/tfidf2.png?token=AR6W6B6IPKIUZAAG2STMJRTBJLYQ2)\n"
    ]
   },
   {
