--- a/Tf_Idf_From_Scratch.ipynb
+++ b/Tf_Idf_From_Scratch.ipynb
@@ -99,7 +99,7 @@
     "Scikit-Learn notasyonunda pay ve paydaya sıfır hatasını önelemek için fazladan 1 sabit sayısı eklenir. \n",
     "\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](https://raw.githubusercontent.com/aslicerman/TF-IDF-From-Scratch/main/tfidf3.png?token=AR6W6B2RJSQGICWEUGK3V2LBJLZPE)"
    ]
   },
   {
