--- a/Tf_Idf_From_Scratch.ipynb
+++ b/Tf_Idf_From_Scratch.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "Bu temsilin ana sorunu, belirli bir kelimenin daha uzun belgelerde daha çok görünme olasılığı olduğundan tf değeri bu kelimeyi gerçekte olduğundan daha önemli hale getirecektir.Bu da uzun belgelere karşı bir önyargı yaratma problemini ortaya çıkaracaktır. Bu nedenle, bu sorunu çözme yaklaşımı,  **L2** veya **Öklid Normu** normalleştirmesidir. \n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "![image.png](https://raw.githubusercontent.com/aslicerman/TF-IDF-From-Scratch/main/tfidf4.png?token=AR6W6BYSJ6ZR2QUM2ILDHOTBJLZTC)\n",
     "\n",
     "                                                    - Öklid normu"
    ]
